--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   flutter_bloc: ^8.1.3
   loading_animation_widget: ^1.2.0+4
   top_snackbar_flutter: ^3.1.0
+  auto_size_text: ^3.0.0
+  shared_preferences: ^2.2.0
 
 dev_dependencies:
   flutter_test:
@@ -73,7 +75,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
       - .env
-  #   - images/a_dot_burr.jpeg
+      - assets/images/error.png
+      - assets/images/list_empty.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -87,7 +90,21 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
+  fonts:
+
+     - family: Poppins
+       fonts:
+         - asset: assets/fonts/poppins/Poppins-SemiBold.ttf
+         - asset: assets/fonts/poppins/Poppins-Medium.ttf
+         - asset: assets/fonts/poppins/Poppins-Regular.ttf
+        #  - asset: assets/fonts/lato/Lato-BlackItalic.ttf
+        #  - asset: assets/fonts/lato/Lato-Bold.ttf
+        #  - asset: assets/fonts/lato/Lato-BoldItalic.ttf
+        #  - asset: assets/fonts/lato/Lato-Light.ttf
+        #  - asset: assets/fonts/lato/Lato-LightItalic.ttf
+        #  - asset: assets/fonts/lato/Lato-Regular.ttf
+        #  - asset: assets/fonts/lato/Lato-Thin.ttf
+        #  - asset: assets/fonts/lato/Lato-ThinItalic.ttf
   #   - family: Schyler
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
